--- a/nginx.conf
+++ b/nginx.conf
@@ -8,11 +8,9 @@ worker_processes  1;
 
 #pid        logs/nginx.pid;
 
-
 events {
     worker_connections  1024;
 }
-
 
 http {
     include       mime.types;
@@ -20,24 +18,46 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    include sites-enabled/*.conf;
+    #include sites-enabled/*.conf;
 
     server {
-	    listen 80;
-	    server_name itzapril.tech codingclubgct.in;
-	    return 301 https://$host$request_uri;
+        server_name  itzapril.tech;
+    	listen 443 ; # managed by Certbot
+    	ssl_certificate /etc/letsencrypt/live/codingclubgct.in/fullchain.pem; # managed by Certbot
+    	ssl_certificate_key /etc/letsencrypt/live/codingclubgct.in/privkey.pem; # managed by Certbot
+    	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+       	root /etc/nginx;
+	index test.html;
+    }	
+    server {
+	server_name codingclubgct.in;
+	root /etc/nginx;
+	index test.html;
+    	listen [::]:443; # managed by Certbot
+    	listen 443 ssl; # managed by Certbot
+    	ssl_certificate /etc/letsencrypt/live/codingclubgct.in/fullchain.pem; # managed by Certbot
+    	ssl_certificate_key /etc/letsencrypt/live/codingclubgct.in/privkey.pem; # managed by Certbot
+    	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+	
+    }
+    server {
+    	if ($host = itzapril.tech) {
+        	return 301 https://$host$request_uri;
+    	} # managed by Certbot
+        listen       80;
+        server_name  itzapril.tech;
+    	return 404; # managed by Certbot
     }
 
     server {
-        listen       443;
-        server_name  itzapril.tech codingclubgct.in;
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
+    	if ($host = codingclubgct.in) {
+        	return 301 https://$host$request_uri;
+   	} # managed by Certbot
+	server_name codingclubgct.in;
+	listen 80;
+	listen [::]:80;
+    	return 404; # managed by Certbot
     }
 }
