--- a/sites-available/coding-club-server.conf
+++ b/sites-available/coding-club-server.conf
@@ -1,18 +1,19 @@
 server {
-    server_name server.codingclubgct.in;
+    server_name coding-club.itzapril.tech server.codingclubgct.in;
     listen 443;
-    location / {
-        proxy_pass http://127.0.0.1:3002;
-        proxy_http_version 1.1;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $http_host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass_request_headers on;    
-    }
-
+    root /etc/nginx/;
+    index test.html;
+    #location / {
+        #proxy_pass http://127.0.0.1:3002;
+        #proxy_http_version 1.1;
+        #proxy_set_header X-Forwarded-Host $host;
+        #proxy_set_header X-Forwarded-Server $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #proxy_set_header X-Forwarded-Proto $scheme;
+        #proxy_set_header Host $http_host;
+        #proxy_set_header Upgrade $http_upgrade;
+        #proxy_set_header Connection "Upgrade";
+        #proxy_pass_request_headers on;    
+    #}
 }
