--- a/nginx.conf
+++ b/nginx.conf
@@ -1,63 +1,23 @@
-
 #user http;
-worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
+worker_processes 1;
+error_log logs/error.log;
+error_log logs/error.log notice;
+error_log logs/error.log info;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
-
-    #include sites-enabled/*.conf;
-
-    server {
-        server_name  itzapril.tech;
-    	listen 443 ; # managed by Certbot
-    	ssl_certificate /etc/letsencrypt/live/codingclubgct.in/fullchain.pem; # managed by Certbot
-    	ssl_certificate_key /etc/letsencrypt/live/codingclubgct.in/privkey.pem; # managed by Certbot
-    	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-       	root /etc/nginx;
-	index test.html;
-    }	
-    server {
-	server_name codingclubgct.in;
-	root /etc/nginx;
-	index test.html;
-    	listen [::]:443; # managed by Certbot
-    	listen 443 ssl; # managed by Certbot
-    	ssl_certificate /etc/letsencrypt/live/codingclubgct.in/fullchain.pem; # managed by Certbot
-    	ssl_certificate_key /etc/letsencrypt/live/codingclubgct.in/privkey.pem; # managed by Certbot
-    	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-	
-    }
-    server {
-    	if ($host = itzapril.tech) {
-        	return 301 https://$host$request_uri;
-    	} # managed by Certbot
-        listen       80;
-        server_name  itzapril.tech;
-    	return 404; # managed by Certbot
-    }
-
-    server {
-    	if ($host = codingclubgct.in) {
-        	return 301 https://$host$request_uri;
-   	} # managed by Certbot
-	server_name codingclubgct.in;
-	listen 80;
-	listen [::]:80;
-    	return 404; # managed by Certbot
-    }
+    include mime.types;
+    default_type application/octet-stream;
+    log_format main
+    '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log logs/access.log main;
+    sendfile on;
+    keepalive_timeout 65;
+    include /etc/nginx/sites-enabled/*.conf;
 }
