--- a/sites-enabled/server.codingclubgct.in.conf
+++ b/sites-enabled/server.codingclubgct.in.conf
@@ -1,6 +1,6 @@
 server {
     server_name server.codingclubgct.in;
-    location / {`
+    location / {
         proxy_pass http://127.0.0.1:3002;
         proxy_http_version 1.1;
         proxy_set_header X-Forwarded-Host $host;
