--- a/sites-enabled/server.codingclubgct.in.conf
+++ b/sites-enabled/server.codingclubgct.in.conf
@@ -3,6 +3,8 @@ server {
     location / {
         proxy_pass http://127.0.0.1:3002;
         proxy_http_version 1.1;
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass_header Authorization;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -11,7 +13,7 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_pass_request_headers on;    
+        proxy_pass_request_headers on;
     }
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/server.codingclubgct.in/fullchain.pem; # managed by Certbot
